--- a/Ej2/Ej2.csproj
+++ b/Ej2/Ej2.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7D7E34BE-12CC-4713-BAE5-377C1149C259}</ProjectGuid>
+    <ProjectGuid>{775CA682-9F9E-4C4C-8F23-51DCF23EFBDA}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>TP4</RootNamespace>
-    <AssemblyName>TP4</AssemblyName>
+    <RootNamespace>Ej2</RootNamespace>
+    <AssemblyName>Ej2</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,11 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cliente.cs" />
     <Compile Include="Controlador.cs" />
-    <Compile Include="DivisionPorCeroException.cs" />
-    <Compile Include="Matematica.cs" />
+    <Compile Include="Cuenta.cs" />
+    <Compile Include="Cuentas.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaldoInsuficienteException.cs" />
+    <Compile Include="SaldoInvalidoException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
