--- a/Ej3/Ej3.csproj
+++ b/Ej3/Ej3.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7D7E34BE-12CC-4713-BAE5-377C1149C259}</ProjectGuid>
+    <ProjectGuid>{886F3DE2-91A5-48D7-A0F6-BDE99EAC2838}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>TP4</RootNamespace>
-    <AssemblyName>TP4</AssemblyName>
+    <RootNamespace>Ej3</RootNamespace>
+    <AssemblyName>Ej3</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,11 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controlador.cs" />
-    <Compile Include="DivisionPorCeroException.cs" />
-    <Compile Include="Matematica.cs" />
+    <Compile Include="ComparadorCorreo.cs" />
+    <Compile Include="ComparadorNombre.cs" />
+    <Compile Include="ComparadorNombreDescendente.cs" />
+    <Compile Include="IRepositorioUsuarios.cs" />
+    <Compile Include="ListaUsuarios.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
