--- a/Ej4/Ej4.csproj
+++ b/Ej4/Ej4.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7D7E34BE-12CC-4713-BAE5-377C1149C259}</ProjectGuid>
+    <ProjectGuid>{5ED38139-08F1-46F5-9FFE-589DEAE769A5}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>TP4</RootNamespace>
-    <AssemblyName>TP4</AssemblyName>
+    <RootNamespace>Ej4</RootNamespace>
+    <AssemblyName>Ej4</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,9 +42,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controlador.cs" />
-    <Compile Include="DivisionPorCeroException.cs" />
-    <Compile Include="Matematica.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
