--- a/Ej5/Ej5.csproj
+++ b/Ej5/Ej5.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5ED38139-08F1-46F5-9FFE-589DEAE769A5}</ProjectGuid>
+    <ProjectGuid>{F388CAE2-7329-4680-AD18-3E61426F19AB}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Ej4</RootNamespace>
-    <AssemblyName>Ej4</AssemblyName>
+    <RootNamespace>Ej5</RootNamespace>
+    <AssemblyName>Ej5</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,19 +42,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Excepciones.cs" />
-    <Compile Include="ListaUsuarios.cs" />
+    <Compile Include="Cliente.cs" />
+    <Compile Include="Controlador.cs" />
+    <Compile Include="Empleo.cs" />
+    <Compile Include="EvaluadorAntiguedadLaboral.cs" />
+    <Compile Include="EvaluadorCantidadCuotas.cs" />
+    <Compile Include="EvaluadorCompuesto.cs" />
+    <Compile Include="EvaluadorEdad.cs" />
+    <Compile Include="EvaluadorMonto.cs" />
+    <Compile Include="EvaluadorSueldo.cs" />
+    <Compile Include="GestorPrestamos.cs" />
+    <Compile Include="IEvaluador.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SolicitudPrestamo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Ej3\Ej3.csproj">
-      <Project>{886f3de2-91a5-48d7-a0f6-bde99eac2838}</Project>
-      <Name>Ej3</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
